# ground_picture

./: CMakeLists.txt  README.md  ground_picture.cpp  ground_picture.hpp
models/ground_picture/: model.config  model.sdf
sample/: sample.world
